# lyra

./: .env.example  .gitignore  .test_result.txt  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  Dockerfile.ml  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  O6_ADDITIONAL_ISSUES.md  README.md  TEST_REFACTOR_PLAN.md  podman-compose.yml  pyproject.toml  requirements-mcp.txt  requirements-ml.txt  requirements.md  requirements.txt
.cursor/: mcp.json  v5.mdc
.cursor/commands/: bug-analysis.md  commit.md  debug-e2e.md  debug-integration.md  debug.md  dev-workflow.md  discover-docs.md  docs-discover.md  implement.md  integration-design.md  lancet-dev-test.md  lancet-dev.md  lyra-report.md  lyra-search.md  merge-complete.md  merge.md  navigate.md  parser-repair.md  pr-review.md  push.md  quality-check.md  refactoring.md  regression-test.md  repair-parser.md  scripts-help.md  suspend.md  task-plan.md  task-select.md  test-create.md  test-review.md  wf-debug.md  wf-dev.md  wf-pr.md  wf-refactor.md  wf-ship.md
.cursor/rules/: code-execution.mdc  commit-message-format.mdc  debug-e2e.mdc  debug.mdc  git-commit.mdc  integration-design.mdc  quality-check.mdc  refactoring.mdc  test-strategy.mdc  test.mdc  v5.mdc  v5_lyra.mdc
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: ci.yml  pages.yml
case_study/lyra/: claims.json  edges.json  evidence_graph.html  fragments.json
config/: academic_apis.yaml  cursor-mcp.json  domains.yaml  engines.yaml  human_behavior.yaml  local.yaml.example  mcp-config.example.json  mcp.json.example  search_parsers.yaml  settings.yaml
config/prompts/: decompose.j2  densify.j2  detect_citation.j2  extract_claims.j2  extract_facts.j2  initial_summary.j2  quality_assessment.j2  relevance_evaluation.j2  summarize.j2  translate.j2
config/searxng/: settings.yml
config/templates/: dashboard.html
config/views/: v_bibliographic_coupling.sql.j2  v_citation_age_gap.sql.j2  v_citation_chains.sql.j2  v_citation_clusters.sql.j2  v_citation_flow.sql.j2  v_claim_evidence_summary.sql.j2  v_claim_origins.sql.j2  v_claim_temporal_support.sql.j2  v_contradictions.sql.j2  v_controversy_by_era.sql.j2  v_emerging_consensus.sql.j2  v_evidence_chain.sql.j2  v_evidence_freshness.sql.j2  v_evidence_timeline.sql.j2  v_hub_pages.sql.j2  v_orphan_sources.sql.j2  v_outdated_evidence.sql.j2  v_reference_candidates.sql.j2  v_source_authority.sql.j2  v_source_impact.sql.j2  v_unsupported_claims.sql.j2
containers/: Dockerfile.ml  docker-compose.gpu.yml  docker-compose.yml  podman-compose.gpu.yml  podman-compose.yml
debug/search_html/: bing_1765757015_test.html  duckduckgo_1765757014_test query.html  duckduckgo_1765757014_test.html  ecosia_1765757015_test.html  startpage_1765757015_test.html
docker/: Dockerfile  Dockerfile.ml
docs/: ARCHITECTURE.md  ASYNC_ARCHITECTURE.md  ASYNC_ARCHITECTURE_ANALYSIS.md  ASYNC_ARCHITECTURE_PROPOSAL_V2.md  AUTH_QUEUE_INTEGRATION_ANALYSIS.md  CONTRIBUTING.md  CURSOR_COMMANDS.md  CURSOR_RULES_COMMANDS.md  EVIDENCE_SYSTEM.md  EVIDENCE_SYSTEM_CURRENT_STATUS.md  IMPLEMENTATION_PLAN.md  J2_ACADEMIC_API_INTEGRATION.md  MCP_REFERENCE.md  O6_ADDITIONAL_ISSUES.md  O7_MCP_TOOL_CONFORMANCE.md  PHASE_O_REFACTORING.md  P_EVIDENCE_SYSTEM.md  Q_ASYNC_ARCHITECTURE.md  Q_memo.md  REFACTORING_BACKLOG.md  REPORT_E2E_CASE_STUDY_20260102_v2.md  REQUIREMENTS.md  R_LORA.md  R_LORA_FINETUNING.md  R_SEARCH_PAGINATION.md  R_SERP_ENHANCEMENT.md  R_memo.md  S_FULL_E2E.md  S_LORA.md  S_memo.md  Sb_CITATION_NETWORK.md  Sc_REFACTORING_BACKLOG.md  Sd_EVIDENCE_GRAPH_EXPLORATION.md  TEST_LAYERS.md  TRUST_LEVEL.md  T_LORA.md  architecture.md  confidence-calibration-design.md  error_analysis.md  mcp_reference.md  (+7 more)
docs/adr/: 0001-local-first-zero-opex.md  0001-thinking-working-separation.md  0002-local-first-zero-opex.md  0002-thinking-working-separation.md  0002-three-layer-collaboration-model.md  0003-mcp-over-cli-rest.md  0004-local-llm-extraction-only.md  0005-8-layer-security-model.md  0005-evidence-graph-structure.md  0006-8-layer-security-model.md  0006-eight-layer-security-model.md  0010-lora-fine-tuning.md  (+20 more)
migrations/: 001_add_wayback_columns.sql  002_add_academic_columns.sql  003_add_trust_level_to_edges.sql  004_add_adoption_status.sql  004_add_contradiction_flag.sql
scripts/: bump_version.py  chrome.sh  clean.sh  common.sh  db.sh  deadcode.sh  debug_academic_search.py  debug_cache_hit_test.py  debug_chrome_contexts.py  debug_citation_graph.py  debug_claims_pipeline.py  debug_e2e_02.py  debug_e2e_test.py  debug_exploration_state.py  debug_llm_templates.py  debug_mcp_metrics.py  debug_metrics_test.py  debug_openalex_s2.py  debug_pdf_fetch.py  debug_rate_limiter_2workers.py  dev.sh  doctor.sh  download_models.py  fix_fixture_args.py  fix_test_type_annotations.py  mcp.sh  migrate.py  ml_models.sh  ollama.sh  quality.sh  quick_test.sh  report.sh  setup.sh  start-chrome.sh  test.sh  test_extra.sh  test_scripts.sh  up.sh
src/: main.py  ml_client.py
tests/: TEST_REVIEW_ACADEMIC_INTEGRATION.md  TEST_REVIEW_SUMMARY.md  conftest.py  test_ab_test.py  test_academic_api_profiles.py  test_academic_apis_config.py  test_academic_provider.py  test_academic_rate_limiter.py  test_academic_rate_limiter_backoff.py  test_activity_tracking.py  test_bfs.py  test_bibliography_flow.py  test_browser_archive.py  test_browser_provider.py  test_browser_search_provider.py  test_budget.py  test_bug001b_early_citation_enqueue.py  test_bug001e_empty_error_message.py  test_calibrate_rollback.py  test_calibration.py  test_calibration_rollback.py  test_canonical_index.py  test_canonical_index_merge_provider_ids.py  test_captcha_intervention.py  test_causal_trace.py  test_chain_of_density.py  test_challenge_detector.py  test_chrome_auto_start.py  test_chrome_worker_pool.py  test_circuit_breaker.py  test_citation_detector.py  test_citation_filter.py  test_citation_graph_job.py  test_citation_placeholder.py  test_claim_decomposition.py  test_claim_timeline.py  test_cloud_agent_detection.py  test_concurrency_config.py  test_concurrency_wiring.py  test_cross_verification.py  (+127 more)
(+449 files in other folders)
