[project]
name = "lancet"
version = "0.1.0"
description = "Local Autonomous Deep Research Agent for OSINT"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Lancet Team"}
]
keywords = ["osint", "research", "agent", "mcp", "llm"]

[project.scripts]
lancet = "src.main:main"
lancet-mcp = "src.mcp.server:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | __pycache__
    | data
    | logs
    | models
)/
'''

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-v"
# Test Execution Layers (Cloud Agent Compatible):
#   L1 (CI/Cloud): unit + integration (auto-selected in cloud environments)
#   L2 (Local):    unit + integration (default)
#   L3 (E2E):      all tests including e2e (requires full environment)
markers = [
    "unit: Unit tests with no external dependencies (fast, <30s total). L1/L2/L3 compatible.",
    "integration: Integration tests with mocked external dependencies (<2min total). L1/L2/L3 compatible.",
    "e2e: End-to-end tests requiring real environment (Chrome, Ollama, network). L3 only.",
    "slow: Tests that take more than 5 seconds. Skipped in cloud agents by default.",
    "external: E2E using external services with moderate block risk (Mojeek, Qwant).",
    "rate_limited: E2E using services with high block risk (DuckDuckGo, Google).",
    "manual: E2E requiring human interaction (CAPTCHA resolution).",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    # Ignore ResourceWarning for unclosed event loops during test cleanup
    # This is a known issue with pytest-asyncio where event loops are garbage
    # collected after tests complete. The warning doesn't affect test behavior.
    "ignore:unclosed event loop:ResourceWarning",
    "ignore:unclosed <socket:ResourceWarning",
    # Ignore PytestUnraisableExceptionWarning for subprocess cleanup after tests
    # This occurs when BaseSubprocessTransport.__del__ runs after the event loop closes
    "ignore:Exception ignored in.*BaseSubprocessTransport:pytest.PytestUnraisableExceptionWarning",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "src/__init__.py",
    "src/*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 0
show_missing = true

