[project]
name = "lyra"
version = "0.1.0"
description = "Local Yielding Research Aide for Academic Research"
readme = "README.md"
requires-python = ">=3.14,<3.15"
license = {text = "MIT"}
authors = [
    {name = "Katsuya Shibuki"}
]
keywords = ["academic", "research", "agent", "mcp", "llm"]

# =============================================================================
# Core Dependencies (all environments)
# =============================================================================
dependencies = [
    # Core
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.2.1",
    # Logging
    "structlog>=23.2.0",
    # Database
    "aiosqlite>=0.19.0",
]

# =============================================================================
# Optional Dependencies
# =============================================================================
[project.optional-dependencies]
# MCP Server (lightweight, for WSL host execution)
mcp = [
    "mcp>=1.0.0",
    "jinja2>=3.1.0",
    # HTTP Client (Browser Impersonation)
    "curl-cffi>=0.6.0",
    # Browser Automation
    "playwright>=1.40.0",
    # Content Extraction
    "trafilatura>=1.6.0",
    "beautifulsoup4>=4.12.0",
    "readability-lxml>=0.8.1",
    # Japanese NLP (for BM25 tokenization)
    "sudachipy>=0.6.7",
    "sudachidict-core>=20231110",
    # Text Processing & Search
    "rank-bm25>=0.2.2",
    "tldextract>=5.1.0",
    "kneed>=0.8.0",  # Kneedle algorithm for dynamic cutoff
    # Graph
    "networkx>=3.2.0",
    # HTTP Client (for proxy calls)
    "httpx>=0.26.0",
    # Archive & WARC
    "warcio>=1.7.4",
    # Similarity (for deduplication)
    "datasketch>=1.6.0",
    # Model download (for make setup-ml-models)
    "huggingface_hub>=0.20.0",
]

# ML Server (embedding, reranking, NLI inference)
ml = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sentence-transformers>=2.2.2",
    "transformers>=4.36.0",
    "torch>=2.1.0",
    "huggingface_hub>=0.20.0",
    "httpx>=0.26.0",
]

# Browser automation (Cloudflare/Turnstile bypass)
browser = [
    "undetected-chromedriver>=3.5.4",
    "selenium>=4.15.0",
]

# Content extraction (additional extractors)
extraction = [
    "justext>=3.0.0",
    "boilerpy3>=1.0.6",
]

# Tor network support
tor = [
    "stem>=1.8.2",
    "pysocks>=1.7.1",
]

# Development tools
dev = [
    "black>=23.11.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
    "check-jsonschema>=0.36.0",
    "types-PyYAML>=6.0.12",
    "ipython>=8.0.0",
]

# Testing
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-watch>=4.2.0",
]

# Full development environment (all optional deps)
full = [
    "lyra[mcp,ml,browser,extraction,tor,dev,test]",
]

[project.scripts]
lyra = "src.main:main"
lyra-mcp = "src.mcp.server:main"

# =============================================================================
# Build System
# =============================================================================
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# =============================================================================
# Dependency Groups (for uv)
# =============================================================================
[dependency-groups]
dev = [
    "lyra[mcp,dev,test]",
]

# =============================================================================
# Tool Configuration
# =============================================================================
[tool.black]
line-length = 100
target-version = ["py314"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | __pycache__
    | data
    | logs
    | models
)/
'''

[tool.ruff]
line-length = 100
target-version = "py314"
exclude = [
    "*.json",
    "data/",
    "logs/",
    "models/",
    ".git/",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "E402",  # Some test scripts intentionally import after sys.path manipulation
    "E701",  # Multiple statements on one line - false positives in docstrings with colons
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-v -m 'not e2e and not slow'"
# Test Execution Layers (Cloud Agent Compatible):
#   L1 (CI/Cloud): unit + integration (auto-selected in cloud environments)
#   L2 (Local):    unit + integration (default)
#   L3 (E2E):      all tests including e2e (requires full environment)
markers = [
    "unit: Unit tests with no external dependencies (fast, <30s total). L1/L2/L3 compatible.",
    "integration: Integration tests with mocked external dependencies (<2min total). L1/L2/L3 compatible.",
    "e2e: End-to-end tests requiring real environment (Chrome, Ollama, network). L3 only.",
    "slow: Tests that take more than 5 seconds. Skipped in cloud agents by default.",
    "external: E2E using external services with moderate block risk (Mojeek, Qwant).",
    "rate_limited: E2E using services with high block risk (DuckDuckGo, Google).",
    "manual: E2E requiring human interaction (CAPTCHA resolution).",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    # Ignore ResourceWarning for unclosed event loops during test cleanup
    # This is a known issue with pytest-asyncio where event loops are garbage
    # collected after tests complete. The warning doesn't affect test behavior.
    "ignore:unclosed event loop:ResourceWarning",
    "ignore:unclosed <socket:ResourceWarning",
    # Ignore PytestUnraisableExceptionWarning for subprocess cleanup after tests
    # This occurs when BaseSubprocessTransport.__del__ runs after the event loop closes
    "ignore:Exception ignored in.*BaseSubprocessTransport:pytest.PytestUnraisableExceptionWarning",
    # Ignore aiosqlite Connection.__del__ warnings during test cleanup
    # This occurs when aiosqlite Connection objects are garbage collected after
    # the event loop closes. The warning is benign: connections are eventually
    # cleaned up by GC. Root cause is aiosqlite's async close() being called
    # from a sync __del__ method when no event loop is available.
    # See: https://github.com/omnilib/aiosqlite/issues/244
    "ignore:Exception ignored in.*Connection.__del__:pytest.PytestUnraisableExceptionWarning",
]

[tool.coverage.run]
source = ["src"]
branch = true
data_file = "tests/.coverage"
omit = [
    "src/__init__.py",
    "src/*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 0
show_missing = true
